--- a/plugin.xml
+++ b/plugin.xml
@@ -44,6 +44,7 @@
     </platform>
 
     <platform name="android">
+        <framework src="androidx.security:security-crypto:1.0.0" />
         <config-file target="res/xml/config.xml" parent="/*">
             <feature name="SecureStorage" >
                 <param name="android-package" value="com.crypho.plugins.SecureStorage"/>
